done with changes in css o make responsive

--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
+/* body css */
 body{
     background-color: #33455f;
     text-align: center;
     color:#2bb59b;
     font-family: 'Lobster', cursive;
 }
+/* heading css */
 .main-title{
    
     font-weight:bolder;
     font-size: 10rem;
-    /*text-align: center;*/
     padding-top: 0%;
     margin-top: 0%;
     margin-bottom: 0%;
 }
+/* div class="game-block" css*/
 .game-block{
     font-size: 3rem;
     display: flex;
@@ -24,22 +26,10 @@ body{
     padding-top: 0%;
 }
 .game-block:first-child{
-    margin-right: 20px;
+  margin-right: 20px;
 }
-/* .Player-1{
-    margin-left: 500px;
-}
-.Player-2{
-    margin-right: 500px;
-} */
-.footer{
-    margin-top: 10%;
-    color: white;
-    letter-spacing: 3px;
-}
-/* .btn{
-    margin-top: 10%;
-} */
+/* button css */
+
 .button-49,
 .button-49:after {
   width: 250px;
@@ -138,4 +128,28 @@ body{
     height: 86px;
     line-height: 88px;
   }
+}
+/* footer section */
+.footer{
+    margin-top: 10%;
+    color: white;
+    letter-spacing: 3px;
+}
+
+/* adding media query for responsiveness */
+@media (max-width:500px){
+  .main-title{
+    font-size: 4rem;
+  }
+  .game-block{
+    font-size: 2rem;
+    display:block;
+    margin-top: 0%;
+    text-align: center;
+}
+  .btn{
+    margin-top: 100px;
+  }
+
+
 }
